# CropAbility

./: .gitignore  AGENTS.md  Cargo.toml  JAVA_DEVELOPMENT.md  JAVA_REFACTOR_README.md  README.md  cleanup_model.pt  debug.txt  environment.yml  environment_cpu.yml  gtp_gpu_model.pt  install.py  pom.xml  pyproject.toml  requirements-cpu.txt  requirements-gpu.txt  requirements.txt  temp_pom_update.xml
.cursor/rules/: cropability-docs.mdc  cropability-project.mdc  cropability-python.mdc  cropability-rust.mdc  cropability-tests.mdc  english-only.mdc  progress-logging.mdc
archive/java/: TritonJNI.java  TritonJNIWrapper.java
archive/legacy/: README.md
archive/legacy/pgl/: __init__.py
archive/legacy/pgl/ca/gpu/kernel/: birth.py  出生证明_无章重制版.docx
archive/legacy/pgl/ops/: __init__.py  add.py  export.py  gtp_demo.py  gtp_test.py  gtp_torchscript_export.py  test.py  test_gtp_gpu.py
cropability/: __init__.py
cropability/cli/: __init__.py  main.py
cropability/genomics/: __init__.py  alignment.py  fastcall3.py  gwas.py  ld.py  pileup.py  pipeline.py  variant.py
cropability/gpu/: __init__.py  device_manager.py  distributed.py
cropability/io/: __init__.py  bam.py  fasta.py  vcf.py
cropability/kernels/: __init__.py  matrix.py  pairwise.py  seq.py  stats.py
cropability/models/: __init__.py  evo2.py  torchscript.py
cropability/utils/: __init__.py  config.py  logging.py  timer.py
doc/: DEPENDENCIES.md  PROGRESS_README.md  PYTHON_DEVELOPMENT.md  RUST_DEVELOPMENT.md  TESTING.md  TODO.md  TODO_PROGRESS_LOG.md  TODO_PROGRESS_SYNC.md
doc/progress/: 2026-05-21.md  2026-06-04.md  2026-06-30.md
native_libs/: libgomp.so.1
src/main/java/com/example/triton/: TritonIntegration.java  TritonModelTest.java  TritonOperator.java  TritonSimulatedTest.java
src/main/python/: README.md  benchmark_gtp.py  benchmark_plot.py  export_cleanup_model.py  find_ops.py  pgl_main.py  requirements.txt  setup.py  test_cleanup_export.py  test_cleanup_hack.py  test_cleanup_trace.py  triton_add_model.pt
src/main/python/cropability/: __init__.py
src/main/python/cropability/cli/: main.py
src/main/python/cropability/genomics/: __init__.py  alignment.py  fastcall3.py  gwas.py  ld.py  pileup.py  pipeline.py  variant.py
src/main/python/cropability/gpu/: __init__.py  device_manager.py  distributed.py
src/main/python/cropability/io/: __init__.py  bam.py  fasta.py  vcf.py
src/main/python/cropability/kernels/: __init__.py  matrix.py  pairwise.py  seq.py  stats.py
src/main/python/cropability/native/: __init__.py
src/main/python/cropability/ngs/: __init__.py  fastcall3.py  io.py  pileup.py  pipeline.py
src/main/python/cropability/utils/: __init__.py  config.py  logging.py  timer.py
src/main/python/cropability/viz/: __init__.py  plots.py
src/main/python/pgl/: __init__.py  test.py
src/main/python/pgl/ops/: __init__.py  add.py  export.py  gtp.py  gtp_test.py  gtp_torchscript_export.py  test.py  test_gtp_gpu.py
src/main/resources/: README.md  simplelogger.properties  triton.properties
src/main/rust/: lib.rs  python.rs
src/main/rust/genomics/: fastcall3.rs  mod.rs  pileup.rs  pipeline.rs
src/main/rust/io/: bam.rs  fasta.rs  mod.rs  vcf.rs
src/main/torchscript/: triton_add_model.pt
src/test/java/com/example/triton/: TritonJNIWrapperTest.java  TritonOperatorTest.java
src/test/python/: __init__.py  conftest.py  test_cli.py  test_config.py  test_genomics.py  test_gpu_manager.py  test_kernels_seq.py  test_kernels_stats.py  test_ngs_io.py  test_ngs_pipeline.py
tests/: conftest.py  test_cli_evo2.py  test_config.py  test_genomics.py  test_gpu_manager.py  test_io.py  test_kernels_seq.py  test_kernels_stats.py  test_models.py  test_ngs_pipeline.py
